# momentum-forge

./: CLAUDE.md  alpaca_client.py  congress_tracker.py  gov_scraper.py  index.html  requirements.txt  screener.py  sec_edgar.py  server.py
.github/workflows/: backtest.yml  discover.yml  paper-trade.yml
confluence-engine/: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  go.sh  requirements-backtest.txt  requirements.txt  start.sh
confluence-engine/backtest/: __init__.py  data.py  engine.py  metrics.py  run.py  signals.py  strategies.py
confluence-engine/backtest/results/: results.json
confluence-engine/config/: signals.yaml  watchlist.yaml
confluence-engine/rust-engine/: Cargo.toml  pyproject.toml
confluence-engine/rust-engine/src/: lib.rs
confluence-engine/scripts/: backtest_momentum.py  migrate.py  seed_watchlist.py
confluence-engine/src/: config.py
confluence-engine/src/api/: dependencies.py  main.py
confluence-engine/src/backtesting/: __init__.py  ai_analyst.py  changepoint.py  data_feeds.py  engine.py  feature_importance.py  fracdiff.py  futures_feed.py  fx_feed.py  genetic_optimizer.py  hrp.py  meta_labeling.py  metrics.py  position_sizing.py  regime_hmm.py  risk_management.py  runner.py  signal_processing.py  strategies.py
confluence-engine/src/models/: __init__.py  base.py  tables.py
confluence-engine/src/services/: ai_router.py  alpaca_client.py  auto_journal.py  autonomous_scheduler.py  autonomous_trader.py  cache.py  confluence.py  scheduler.py  signal_tracker.py  (+2 more)
(+25 files in other folders)
