[package]
name = "forge-engine"
version = "0.1.0"
edition = "2021"
description = "Rust hot path for Momentum Forge backtesting engine"

[lib]
name = "forge_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
